:ambulance: Fix support for JDK9